--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZ/BubBe+DcsJkSwQ5OeLB",
+      "authorship_tag": "ABX9TyM1Bp5Vhj2DaAcYPQqpDUb0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5016,10 +5016,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PYdljvoqKlUH",
-        "outputId": "84dc0e8d-3525-4e58-9f1f-39612dbe96b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "84dc0e8d-3525-4e58-9f1f-39612dbe96b9"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -5042,7 +5042,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5057,15 +5057,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "uyOTylWeKlLo",
-        "outputId": "7567496c-04ed-49d1-d640-dcefd5d9333e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7567496c-04ed-49d1-d640-dcefd5d9333e"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5080,10 +5080,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "yPnon0NEGpBA",
-        "outputId": "d313e3ae-cef2-406a-aeed-fe8a76d58e84",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d313e3ae-cef2-406a-aeed-fe8a76d58e84"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -5102,7 +5102,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5117,15 +5117,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "4H6uhhuNGozO",
-        "outputId": "bf5257e1-2b59-48b8-cd33-0d2bbc67dcd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf5257e1-2b59-48b8-cd33-0d2bbc67dcd4"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5137,18 +5137,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "StSey7f7jUmO"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "QjkuRZ3DHE8U"
+        "id": "QjkuRZ3DHE8U",
+        "outputId": "95cbd8a5-78d9-4ace-be5e-4e4fcd1bbeb2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -5179,29 +5174,52 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "r7BS44sTHEzk"
+        "id": "r7BS44sTHEzk",
+        "outputId": "b9b51466-8fa0-4a12-c1a0-00f37549f3ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "BMW X5 1999\n",
+            "Ford Mustang 1969\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sAWgqgADHg47"
+        "id": "sAWgqgADHg47",
+        "outputId": "e77063b4-f202-4547-b57e-41d71dacc97b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
-        "\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
@@ -5231,19 +5249,40 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-JagdTUNHg0f"
+        "id": "-JagdTUNHg0f",
+        "outputId": "9481ee6f-77ad-4753-ce7b-4c1bff74b2fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "BMW X5 1999\n",
+            "Ford Mustang 1969\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -5252,7 +5291,6 @@
       },
       "source": [
         "%%script false\n",
-        "\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
@@ -5275,18 +5313,20 @@
         "# Line 8: error: 'int MyClass::y' is private\n",
         "# Line 14: error: within this context"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LfIOgkyZInao"
+        "id": "LfIOgkyZInao",
+        "outputId": "93fb30bf-78a5-4e66-deb7-c1c600903420",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
-        "\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
@@ -5306,28 +5346,51 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oiG0RSZjInHS"
+        "id": "oiG0RSZjInHS",
+        "outputId": "56570a82-f91d-44d9-d459-610ca5e8eeb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aOru4KrJYA1S"
+        "id": "aOru4KrJYA1S",
+        "outputId": "c968c6ee-529a-472b-d008-f8bb1b598eba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
         "#include <iostream>\n",
         "using namespace std;\n",
         "\n",
@@ -5351,28 +5414,51 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zaolZDXrYD9V"
+        "id": "zaolZDXrYD9V",
+        "outputId": "42fdee33-cd6e-4a68-f860-51b82b721e83",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "50000"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BQ7FyXY7YqxQ"
+        "id": "BQ7FyXY7YqxQ",
+        "outputId": "79a3c1a8-53f9-42f3-ff57-278434572fd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
-        "\n",
         "#include <iostream>\n",
         "#include <string>\n",
         "using namespace std;\n",
@@ -5397,27 +5483,51 @@
         "  myCar.honk();\n",
         "  cout << myCar.brand + \" \" + myCar.model;\n",
         "  return 0;\n",
-        "}\n",
-        "\n"
+        "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YDeaI5uzYucL"
+        "id": "YDeaI5uzYucL",
+        "outputId": "861ac0df-56a5-4d98-b061-d951a011f59a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tuut, tuut! \n",
+            "Ford Mustang"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "94a6-oLOZKkn"
+        "id": "94a6-oLOZKkn",
+        "outputId": "4664adf0-afff-47f5-8d64-17095a6ecdc9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -5447,19 +5557,48 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Jrs7Y29GZM8c"
+        "id": "Jrs7Y29GZM8c",
+        "outputId": "4094f910-e5a8-4852-b7f5-d07fef0f94d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Some content in parent class."
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eX5l5yP-pXmo"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "code",
