--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNL+ELNFOeV4l4+a7LL9Ehi",
+      "authorship_tag": "ABX9TyM8nY/X67mw3VFqJMXzfZ1q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7046,15 +7046,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6mG6c6meBPpM"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "MfdbtfCCngg8"
       },
       "source": [
@@ -7065,10 +7056,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3tnB25w1zrxL",
-        "outputId": "5a5afff0-a433-40ce-a4ba-08311e09a38d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a5afff0-a433-40ce-a4ba-08311e09a38d"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -7101,10 +7092,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hxa_wTdV0GCp",
-        "outputId": "9b93244c-1fee-4d18-f95f-0533533aaae7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9b93244c-1fee-4d18-f95f-0533533aaae7"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7148,10 +7139,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "R5u8ZcTw0lT2",
-        "outputId": "0411f957-30ce-4fe7-f592-20db6210258e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0411f957-30ce-4fe7-f592-20db6210258e"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7170,15 +7161,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9t50Wtot8ROs"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "XRehluVA04rm"
       },
       "source": [
@@ -7189,10 +7171,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AeNX7Mf604JS",
-        "outputId": "78f068a5-743f-4278-92e8-24e95745ca38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "78f068a5-743f-4278-92e8-24e95745ca38"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -7221,10 +7203,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DxpK77U703aY",
-        "outputId": "86dda031-c44c-4bdc-f9cb-1d29c50494e8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "86dda031-c44c-4bdc-f9cb-1d29c50494e8"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7244,10 +7226,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "cKWDI5_27IPT",
-        "outputId": "dc63795d-39ae-44ec-ffed-7b512fc01000",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dc63795d-39ae-44ec-ffed-7b512fc01000"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -7288,10 +7270,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "TsWShGFw7IEb",
-        "outputId": "a8e0fb3f-db0b-4cc2-b44c-c43cb2a018b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a8e0fb3f-db0b-4cc2-b44c-c43cb2a018b0"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7321,10 +7303,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ETai0R3x8wbt",
-        "outputId": "3c94e392-09c1-4dd1-dd2a-0ac0da713598",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3c94e392-09c1-4dd1-dd2a-0ac0da713598"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -7361,10 +7343,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RnKYrFky8wQU",
-        "outputId": "dbeb93f5-1b6e-4cea-ed37-7800e8ff6567",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbeb93f5-1b6e-4cea-ed37-7800e8ff6567"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7394,10 +7376,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wGId5NXL5RXr",
-        "outputId": "cbddab54-9c6e-4640-e58e-7e8406b4156c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cbddab54-9c6e-4640-e58e-7e8406b4156c"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -7431,10 +7413,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JSaRG4vV5kWr",
-        "outputId": "b2281bb0-0ba1-47c8-ee0c-527735395943",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b2281bb0-0ba1-47c8-ee0c-527735395943"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7468,10 +7450,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3ztmFecm7Bzr",
-        "outputId": "4bb4da29-c458-417e-a8e5-abf318631a50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4bb4da29-c458-417e-a8e5-abf318631a50"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -7515,10 +7497,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "4G96oNEY7GNf",
-        "outputId": "5417739a-624e-40ac-8fea-be5a540ef693",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5417739a-624e-40ac-8fea-be5a540ef693"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7563,10 +7545,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "T8c8-6a9wmx9",
-        "outputId": "696ebb29-2400-41fc-8a66-2e5e15c65ea3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "696ebb29-2400-41fc-8a66-2e5e15c65ea3"
       },
       "source": [
         "# 実験 // がarray version で これは vector version\n",
@@ -7608,10 +7590,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "a9yiiZGRwmm7",
-        "outputId": "5eb106f8-7d42-4251-fbbc-ebf4f4bd1fed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5eb106f8-7d42-4251-fbbc-ebf4f4bd1fed"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7635,10 +7617,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "RzhHagqtxnAQ",
-        "outputId": "52c5f275-541e-4f56-aea3-2ebf05d2af2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "52c5f275-541e-4f56-aea3-2ebf05d2af2a"
       },
       "source": [
         "# 実験 C++17のstd:sizeを使ってみる\n",
@@ -7675,10 +7657,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "q-amuNJVxnbj",
-        "outputId": "07c84d1d-f356-4b6d-d5f6-c561ad1c2217",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "07c84d1d-f356-4b6d-d5f6-c561ad1c2217"
       },
       "source": [
         "!g++ -std=gnu++17 temp.cpp ; ./a.out"
@@ -7727,10 +7709,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "otgfcxgx07tJ",
-        "outputId": "da5a64ff-a466-4cce-9187-44c28e677747",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "da5a64ff-a466-4cce-9187-44c28e677747"
       },
       "source": [
         "# 実験\n",
@@ -7770,10 +7752,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "klqMCPUs07g6",
-        "outputId": "94170e6e-d2fe-4e5c-a69f-e76da8b607fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "94170e6e-d2fe-4e5c-a69f-e76da8b607fd"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
@@ -7816,7 +7798,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oCq-Cjgs3PGq"
+        "id": "oCq-Cjgs3PGq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4c7865a6-7f6e-491a-e28d-06947cf5e45c"
       },
       "source": [
         "# 実験\n",
@@ -7841,24 +7827,52 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Yvshq3DR3O_G"
+        "id": "Yvshq3DR3O_G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "890dc2bc-1cd9-4d94-be93-c8474de9a093"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0RQz7vJo5__7"
+        "id": "0RQz7vJo5__7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5488c40f-1901-4535-dbc6-c6c69455a854"
       },
       "source": [
         "# 実験 cpprefjp.github.io にある例\n",
@@ -7885,19 +7899,50 @@
         "  });\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0qRpGxmz6AhE"
+        "id": "0qRpGxmz6AhE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a24f58ad-f62f-47a9-c73f-fc1188040e7d"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "2\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LleqS4-hrsvM"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -10176,15 +10221,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yq4GK6uqsCrK"
-      },
-      "source": [
-        "# いまここ"
-      ]
     }
   ]
 }
