--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -64,19 +64,33 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6FkejEE2crA5"
+        "id": "6FkejEE2crA5",
+        "outputId": "1463808c-b3d2-4544-ccba-4a9370c7a563",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!elixir -v"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Erlang/OTP 24 [erts-12.0.1] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
+            "\n",
+            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -226,7 +240,7 @@
         "  {:msg, contents} -> IO.puts contents\n",
         "end"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +263,7 @@
       "source": [
         "!elixir temp.exs"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,10 +291,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gXbF4HnE1jnt",
-        "outputId": "5a4af229-255e-40cf-f1c7-e84e251ec0e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5a4af229-255e-40cf-f1c7-e84e251ec0e2"
       },
       "source": [
         "%%writefile chain.exs\n",
@@ -306,7 +320,7 @@
         "  end\n",
         "end"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,15 +335,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Flqn_Jrmrxy1",
-        "outputId": "163a2e17-a106-44f8-d9bb-2c09a1decfe4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "163a2e17-a106-44f8-d9bb-2c09a1decfe4"
       },
       "source": [
         "!elixir --erl \"+P 1000000\" -r chain.exs  -e \"Chain.run(1_000_000)\""
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1741,7 +1755,7 @@
         "!elixir -e 'IO.inspect Enum.map([1,2,3], &(&1 + 3))'\n",
         "!elixir -e 'plus_three = &(&1 + 3);IO.inspect Enum.map([1,2,3], plus_three)'"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1797,7 +1811,7 @@
         "# !elixir -e 'x = 1;IO.puts 2 = x'\n",
         "#=> (MatchError) no match of right hand side value: 1"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1825,7 +1839,7 @@
         "# !elixir -e 'list = [1, 2, 3]; IO.inspect [] = list'\n",
         "#=> (MatchError) no match of right hand side value: [1, 2, 3]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1850,7 +1864,7 @@
         "!elixir -e 'list = [1, 2, 3]; IO.inspect [1 | tail] = list'\n",
         "!elixir -e 'list = [1, 2, 3];  [1 | tail] = list; IO.inspect tail'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1876,7 +1890,7 @@
         "!elixir -e 'IO.inspect {:ok, value} = {:ok, \"Successful!\"}'\n",
         "!elixir -e '{:ok, value} = {:ok, \"Successful!\"}; IO.inspect  value'"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1926,7 +1940,7 @@
         "!elixir -e 'key = \"hello\"; IO.inspect %{^key => value} = %{\"hello\" => \"world\"}'\n",
         "!elixir -e 'key = \"hello\"; %{^key => value} = %{\"hello\" => \"world\"}; IO.inspect value'"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1960,7 +1974,7 @@
         "!elixir -e 'greeting = \"Hello\"; greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"#{greeting},#{name}\" end; IO.inspect greet.(\"Hello\",\"Sean\")'\n",
         "!elixir -e 'greeting = \"Hello\"; greet = fn (^greeting, name) -> \"Hi #{name}\"; (greeting, name) -> \"#{greeting},#{name}\" end; IO.inspect greet.(\"Mornin\",\"Sean\")'"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
