--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNYTGbkHmHdrCSgdzMTo1eq",
+      "authorship_tag": "ABX9TyMM71QyrFIkq3UrwTuowZin",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "id": "TEv8_GZXEGHM"
       },
       "source": [
-        "# はじめに少し実験"
+        "はじめに少し実験"
       ]
     },
     {
@@ -64,8 +64,7 @@
       "source": [
         "# 改行の入り方の実験 => 行間、行の前後、に注意\n",
         "# %%html に突然文字を書いても出力する。\n",
-        "# 全体を括っている<html></html><body></body><div></div>が省略されている。\n",
-        "\n",
+        "# 全体を覆っている<html></html><body></body><div></div>が省略されている。\n",
         "%%html\n",
         "<h1>見出し</h1>\n",
         "<p>段落</p>\n",
@@ -173,11 +172,11 @@
         "id": "fdg-oc7MDNok"
       },
       "source": [
-        "結論的にはそれぞれの環境で正しいコメント記法は使えるので、正しいコメント記法に従う。\r\n",
-        "1. Python ベースのコードセルでは #。\r\n",
-        "1. html では `<!-- -->`。\r\n",
-        "1. script では // と /* */。\r\n",
-        "1. style では /* */。\r\n"
+        "結論的にはそれぞれの環境で正しいコメント記法は使えるので、正しいコメント記法に従う。\n",
+        "1. Python ベースのコードセルでは #。\n",
+        "1. html では `<!-- -->`。\n",
+        "1. script では // と /* */。\n",
+        "1. style では /* */。\n"
       ]
     },
     {
@@ -255,12 +254,10 @@
         "id": "CucQPTftzuC3"
       },
       "source": [
-        "# HTML要素とは\r\n",
-        "`<h1></h1>`とか`<p></p>`のことで、文章を構造化する。\r\n",
-        "\r\n",
-        "要素 elment\r\n",
-        "\r\n",
-        "属性 attribute"
+        "# HTML要素とは\n",
+        "`<h1></h1>`とか`<p></p>`のことで、文章を構造化する。\n",
+        "* 要素 elment\n",
+        "* 属性 attribute"
       ]
     },
     {
@@ -270,9 +267,9 @@
       },
       "source": [
         "# CDN\n",
-        "cdn(Content Delivery Network) を使うのはできない。 できるのかもしれないが成功していない。 従って、cdn 経由で jquery、react、などは使えない。\n",
+        "cdn (Content Delivery Network) を使うのはできない。 できるのかもしれないが成功していない。 従って、cdn 経由で jquery、react、などは使えない。\n",
         "\n",
-        "CDN だけでなく、`<title></title>` とか普通に `<head></head>` に入るものは使えない。\n",
+        "CDN だけでなく、`<title></title>` と `<head></head>` に入るものは使えない。\n",
         "\n",
         "`<html></html>` の中に書かれるものは全部使える。 従って、この環境では css と html と javascrip が学べる、ということになる。\n"
       ]
@@ -474,8 +471,8 @@
         "outputId": "5e79a861-8300-449f-e5d3-4438269d1c11"
       },
       "source": [
-        "# 画像の挿入 SVG\r\n",
-        "%%html\r\n",
+        "# 画像の挿入 SVG\n",
+        "%%html\n",
         "<svg width=\"100\" height=\"100\" >  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"grey\"\" stroke-width=\"4\" fill=\"lightsalmon\" />  <circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" /></svg>"
       ],
       "execution_count": null,
@@ -4750,43 +4747,43 @@
       "cell_type": "code",
       "metadata": {
         "id": "p4FoF3U0P9v9",
-        "outputId": "653de0b1-5173-45ac-be81-1be6dad0156b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 98
-        }
+        },
+        "outputId": "653de0b1-5173-45ac-be81-1be6dad0156b"
       },
       "source": [
-        "%%html\r\n",
-        "<style>\r\n",
-        "    tr td:nth-child(2),\r\n",
-        "tr td:nth-child(3) {\r\n",
-        "  background: #ccc;\r\n",
-        "}\r\n",
-        "</style>\r\n",
-        "<table>\r\n",
-        "  <tr>\r\n",
-        "    <th colspan=\"2\">headline 1</th>\r\n",
-        "    <th>headline 2</th>\r\n",
-        "  </tr>\r\n",
-        "  <tr>\r\n",
-        "    <td>column 1</td>\r\n",
-        "    <td>column 2</td>\r\n",
-        "    <td>column 3</td>\r\n",
-        "  </tr>\r\n",
-        "  <tr>\r\n",
-        "    <td>column 1</td>\r\n",
-        "    <td>column 2</td>\r\n",
-        "    <td>column 3</td>\r\n",
-        "  </tr>\r\n",
-        "  <tr>\r\n",
-        "    <td>column 1</td>\r\n",
-        "    <td>column 2</td>\r\n",
-        "    <td>column 3</td>\r\n",
-        "  </tr>\r\n",
+        "%%html\n",
+        "<style>\n",
+        "    tr td:nth-child(2),\n",
+        "tr td:nth-child(3) {\n",
+        "  background: #ccc;\n",
+        "}\n",
+        "</style>\n",
+        "<table>\n",
+        "  <tr>\n",
+        "    <th colspan=\"2\">headline 1</th>\n",
+        "    <th>headline 2</th>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>column 1</td>\n",
+        "    <td>column 2</td>\n",
+        "    <td>column 3</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>column 1</td>\n",
+        "    <td>column 2</td>\n",
+        "    <td>column 3</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>column 1</td>\n",
+        "    <td>column 2</td>\n",
+        "    <td>column 3</td>\n",
+        "  </tr>\n",
         "</table>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4914,8 +4911,8 @@
         "outputId": "b7cd97a2-a5cf-4412-f5f3-60d34b0d0712"
       },
       "source": [
-        "# 実験 <a href=\"\"> としたときどうなるか\r\n",
-        "%%html\r\n",
+        "# 実験 <a href=\"\"> としたときどうなるか\n",
+        "%%html\n",
         "<a href=\"\">Ctrlを押しながらクリックしてみよう!!!!</a>"
       ],
       "execution_count": null,
@@ -4942,12 +4939,12 @@
         "id": "2ZE6AUf61YWW"
       },
       "source": [
-        "# HTML is not case sensitive\r\n",
-        "大文字小文字を区別しない。 大文字小文字を区別しないのに、なぜ全部小文字なのか。 \r\n",
-        "\r\n",
-        "1. プログラムミスを防ぐため。\r\n",
-        "1. まざると美しくないから。\r\n",
-        "1. 区別して意味づけして、例えば inline の strong とかは子文字で、とかにするとわかりやすいかもしれないが、プログラムが区別しないのに人間系の区別を入れるのは正しくないから。\r\n",
+        "# HTML is not case sensitive\n",
+        "大文字小文字を区別しない。 大文字小文字を区別しないのに、なぜ全部小文字なのか。 \n",
+        "\n",
+        "1. プログラムミスを防ぐため。\n",
+        "1. まざると美しくないから。\n",
+        "1. 区別して意味づけして、例えば inline の strong とかは子文字で、とかにするとわかりやすいかもしれないが、プログラムが区別しないのに人間系の区別を入れるのは正しくないから。\n",
         "1. どちらかに寄せるとすると、小文字が美しいから。"
       ]
     },
@@ -4957,7 +4954,7 @@
         "id": "HnjmYyblHAX_"
       },
       "source": [
-        "# いまここ\r\n",
+        "# いまここ\n",
         "https://www.w3schools.com/html/html_attributes.asp"
       ]
     }
