--- a/learnelixir.ipynb
+++ b/learnelixir.ipynb
@@ -6,7 +6,7 @@
       "name": "learnelixir.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO5liSzngfUUDrnGN7hWpSy",
+      "authorship_tag": "ABX9TyPeuaweata7/6CwQWTYjCIj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,14 @@
       },
       "source": [
         "* https://elixirschool.com/ja/lessons/basics/control-structures/\n",
-        "* https://magazine.rubyist.net/articles/0054/0054-ElixirBook.html"
+        "* https://magazine.rubyist.net/articles/0054/0054-ElixirBook.\n",
+        "\n",
+        "古本が手に入った。\n",
+        "\n",
+        "プログラミング elixir\n",
+        "\n",
+        "dave thomas, 笹田耕一・鳥居雪訳、 ohmsha, the pragmatic programmer 1.2: programming elixir\n",
+        "\n"
       ]
     },
     {
@@ -64,7 +71,7 @@
         "!sudo apt update\n",
         "!sudo apt install elixir"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,19 +81,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b60b184f-db5c-4d2c-b935-84aeacf189a8"
+        "outputId": "e514e18a-3a02-4871-86c0-268082dc07e3"
       },
       "source": [
-        "!elixir -v"
+        "!elixir -v\n",
+        "!date"
       ],
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Erlang/OTP 24 [erts-12.0.1] [source] [64-bit] [smp:2:2] [ds:2:2:10] [async-threads:1] [jit]\n",
             "\n",
-            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n"
+            "Elixir 1.12.0 (compiled with Erlang/OTP 24)\n",
+            "Fri May 28 01:06:22 UTC 2021\n"
           ],
           "name": "stdout"
         }
@@ -98,6 +107,7 @@
         "id": "IpYclRqgcttK"
       },
       "source": [
+        "---\n",
         "メモ\n",
         "\n",
         "`!elixir -h` としたら ワンライナー `elixir -e` が使えるらしいことがわかった。\n",
@@ -183,6 +193,7 @@
         "id": "7NE03KtbjVDc"
       },
       "source": [
+        "---\n",
         "ネットで紹介されていた次のコードセルのコードはどうやって実行するのだろう。\n",
         "\n",
         "説明:\n",
@@ -195,7 +206,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_OFyxKshdQ2W"
+        "id": "_OFyxKshdQ2W",
+        "outputId": "8452cb2b-0b6f-4bde-c082-1959625ee526",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile temp.exs\n",
@@ -205,10 +220,48 @@
         "    |> Enum.map(&(Task.async(fn -> func.(&1) end)))\n",
         "    |> Enum.map(&Task.await/1)\n",
         "  end\n",
-        "end"
+        "end\n",
+        "\n",
+        "result = Parallel.pmap 1..1000, &(&1 * &1)\n",
+        "\n",
+        "IO.inspect result"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting temp.exs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B4ysN080Mcaw",
+        "outputId": "60b05381-bf6f-4a85-b9d0-e74dc8e685e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!elixir temp.exs"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324,\n",
+            " 361, 400, 441, 484, 529, 576, 625, 676, 729, 784, 841, 900, 961, 1024, 1089,\n",
+            " 1156, 1225, 1296, 1369, 1444, 1521, 1600, 1681, 1764, 1849, 1936, 2025, 2116,\n",
+            " 2209, 2304, 2401, 2500, ...]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,6 +269,7 @@
         "id": "jbgpkxtYpARC"
       },
       "source": [
+        "---\n",
         "次のもネットで紹介されていた例で、ハローワールド並行処理版\n"
       ]
     },
@@ -370,6 +424,7 @@
         "id": "Ajr_Z2V6mh7Y"
       },
       "source": [
+        "---\n",
         "コメントは `#`"
       ]
     },
@@ -420,6 +475,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JSTaVsDvh8Gl"
+      },
+      "source": [
+        "---"
       ]
     },
     {
@@ -543,7 +607,7 @@
         "outputId": "0851c255-6fb5-4eb5-ba6c-5ccad4d8b18d"
       },
       "source": [
-        "# 文字連結\n",
+        "# 文字連結 `+` ではない!!!!\n",
         "!elixir -e 'IO.puts(\"ABCD\"<>\"EFGH\")'"
       ],
       "execution_count": null,
@@ -1314,31 +1378,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "v2CvxtY_rag8"
-      },
-      "source": [
-        "# enum\n",
-        "\n",
-        "enum はリストなどを列挙するための一連のアルゴリズム。\n",
-        "\n",
-        "* all?、any?\n",
-        "* chunk_every、chunk_by、map_every\n",
-        "* each\n",
-        "* map、filter、reduce\n",
-        "* min、max\n",
-        "* sort、uniq、uniq_by\n",
-        "* キャプチャ演算子 `(&)`\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "g-s-BTlMuwSl"
       },
       "source": [
+        "# help について\n",
         "メモ $\\quad$ 関数の調べ方\n",
         "\n",
-        "下のコードセル 2 つにあるように、対象のモジュールの関数名を調べ、そのヘルプを見ればけっこうくわしくわかる。\n",
+        "Helper の使い方。 help, type, info, information とか。\n",
+        "\n",
+        "下のコードセルにあるように、対象のモジュールの関数名を調べ、そのヘルプを見ればけっこうくわしくわかる。\n",
         "\n",
         "コメントアウトしてあるのは出力が大きいので、とりあえずコメントアウトして出力を抑制してある。\n",
         "\n",
@@ -1366,6 +1414,209 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ChuZDdiEigcH"
+      },
+      "source": [
+        "# h 単独のドキュメントを見たい\n",
+        "# !elixir -e 'require IEx.Helpers;IEx.Helpers.h'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HbbVD-lVi-Du",
+        "outputId": "7a86268d-a098-4fd1-bc88-8af5f04a8ac1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# i というのもある\n",
+        "# !elixir -e 'x = [3,2]; require IEx.Helpers;IEx.Helpers.i x'"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[33mTerm\u001b[0m\n",
+            "\u001b[22m  [3, 2]\u001b[0m\n",
+            "\u001b[33mData type\u001b[0m\n",
+            "\u001b[22m  List\u001b[0m\n",
+            "\u001b[33mReference modules\u001b[0m\n",
+            "\u001b[22m  List\u001b[0m\n",
+            "\u001b[33mImplemented protocols\u001b[0m\n",
+            "\u001b[22m  Collectable, Enumerable, IEx.Info, Inspect, List.Chars, String.Chars\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C4tVLXfYpbh_",
+        "outputId": "b18c9ef5-3fda-43a6-bdd2-e6ba72d6dcb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# !elixir -e 'require IEx.Helpers;IEx.Helpers.h IO'"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\n",
+            "\u001b[7m\u001b[33m                                       IO                                       \u001b[0m\n",
+            "\u001b[0m\n",
+            "Functions handling input/output (IO).\n",
+            "\u001b[0m\n",
+            "Many functions in this module expect an IO device as an argument. An IO device\n",
+            "must be a PID or an atom representing a process. For convenience, Elixir\n",
+            "provides \u001b[36m:stdio\u001b[0m and \u001b[36m:stderr\u001b[0m as shortcuts to Erlang's \u001b[36m:standard_io\u001b[0m and\n",
+            "\u001b[36m:standard_error\u001b[0m.\n",
+            "\u001b[0m\n",
+            "The majority of the functions expect chardata. In case another type is given,\n",
+            "functions will convert those types to string via the \u001b[36mString.Chars\u001b[0m protocol (as\n",
+            "shown in typespecs). For more information on chardata, see the \"IO data\"\n",
+            "section below.\n",
+            "\u001b[0m\n",
+            "\u001b[33m## IO devices\u001b[0m\n",
+            "\u001b[0m\n",
+            "An IO device may be an atom or a PID. In case it is an atom, the atom must be\n",
+            "the name of a registered process. In addition, Elixir provides two shortcuts:\n",
+            "\u001b[0m\n",
+            "  • \u001b[36m:stdio\u001b[0m - a shortcut for \u001b[36m:standard_io\u001b[0m, which maps to the current\n",
+            "    \u001b[36mProcess.group_leader/0\u001b[0m in Erlang\n",
+            "  • \u001b[36m:stderr\u001b[0m - a shortcut for the named process \u001b[36m:standard_error\u001b[0m provided in\n",
+            "    Erlang\n",
+            "\u001b[0m\n",
+            "IO devices maintain their position, which means subsequent calls to any reading\n",
+            "or writing functions will start from the place where the device was last\n",
+            "accessed. The position of files can be changed using the \u001b[36m:file.position/2\u001b[0m\n",
+            "function.\n",
+            "\u001b[0m\n",
+            "\u001b[33m## IO data\u001b[0m\n",
+            "\u001b[0m\n",
+            "IO data is a data type that can be used as a more efficient alternative to\n",
+            "binaries in certain situations.\n",
+            "\u001b[0m\n",
+            "A term of type \u001b[1mIO data\u001b[0m is a binary or a list containing bytes (integers within\n",
+            "the \u001b[36m0..255\u001b[0m range) or nested IO data. The type is recursive. Let's see an\n",
+            "example of one of the possible IO data representing the binary \u001b[36m\"hello\"\u001b[0m:\n",
+            "\u001b[0m\n",
+            "\u001b[36m    [?h, \"el\", [\"l\", [?o]]]\u001b[0m\n",
+            "\u001b[0m\n",
+            "The built-in \u001b[36mt:iodata/0\u001b[0m type is defined in terms of \u001b[36mt:iolist/0\u001b[0m. An IO list is\n",
+            "the same as IO data but it doesn't allow for a binary at the top level (but\n",
+            "binaries are still allowed in the list itself).\n",
+            "\u001b[0m\n",
+            "\u001b[33m### Use cases for IO data\u001b[0m\n",
+            "\u001b[0m\n",
+            "IO data exists because often you need to do many append operations on smaller\n",
+            "chunks of binaries in order to create a bigger binary. However, in Erlang and\n",
+            "Elixir concatenating binaries will copy the concatenated binaries into a new\n",
+            "binary.\n",
+            "\u001b[0m\n",
+            "\u001b[36m    def email(username, domain) do\n",
+            "      username <> \"@\" <> domain\n",
+            "    end\u001b[0m\n",
+            "\u001b[0m\n",
+            "In this function, creating the email address will copy the \u001b[36musername\u001b[0m and \u001b[36mdomain\u001b[0m\n",
+            "binaries. Now imagine you want to use the resulting email inside another\n",
+            "binary:\n",
+            "\u001b[0m\n",
+            "\u001b[36m    def welcome_message(name, username, domain) do\n",
+            "      \"Welcome #{name}, your email is: #{email(username, domain)}\"\n",
+            "    end\n",
+            "    \n",
+            "    IO.puts(welcome_message(\"Meg\", \"meg\", \"example.com\"))\n",
+            "    #=> \"Welcome Meg, your email is: meg@example.com\"\u001b[0m\n",
+            "\u001b[0m\n",
+            "Every time you concatenate binaries or use interpolation (\u001b[36m#{}\u001b[0m) you are making\n",
+            "copies of those binaries. However, in many cases you don't need the complete\n",
+            "binary while you create it, but only at the end to print it out or send it\n",
+            "somewhere. In such cases, you can construct the binary by creating IO data:\n",
+            "\u001b[0m\n",
+            "\u001b[36m    def email(username, domain) do\n",
+            "      [username, ?@, domain]\n",
+            "    end\n",
+            "    \n",
+            "    def welcome_message(name, username, domain) do\n",
+            "      [\"Welcome \", name, \", your email is: \", email(username, domain)]\n",
+            "    end\n",
+            "    \n",
+            "    IO.puts(welcome_message(\"Meg\", \"meg\", \"example.com\"))\n",
+            "    #=> \"Welcome Meg, your email is: meg@example.com\"\u001b[0m\n",
+            "\u001b[0m\n",
+            "Building IO data is cheaper than concatenating binaries. Concatenating multiple\n",
+            "pieces of IO data just means putting them together inside a list since IO data\n",
+            "can be arbitrarily nested, and that's a cheap and efficient operation. Most of\n",
+            "the IO-based APIs, such as \u001b[36m:gen_tcp\u001b[0m and \u001b[36mIO\u001b[0m, receive IO data and write it to the\n",
+            "socket directly without converting it to binary.\n",
+            "\u001b[0m\n",
+            "One drawback of IO data is that you can't do things like pattern match on the\n",
+            "first part of a piece of IO data like you can with a binary, because you\n",
+            "usually don't know the shape of the IO data. In those cases, you may need to\n",
+            "convert it to a binary by calling \u001b[36miodata_to_binary/1\u001b[0m, which is reasonably\n",
+            "efficient since it's implemented natively in C. Other functionality, like\n",
+            "computing the length of IO data, can be computed directly on the iodata by\n",
+            "calling \u001b[36miodata_length/1\u001b[0m.\n",
+            "\u001b[0m\n",
+            "\u001b[33m### Chardata\u001b[0m\n",
+            "\u001b[0m\n",
+            "Erlang and Elixir also have the idea of \u001b[36mt:chardata/0\u001b[0m. Chardata is very similar\n",
+            "to IO data: the only difference is that integers in IO data represent bytes\n",
+            "while integers in chardata represent Unicode code points. Bytes (\u001b[36mt:byte/0\u001b[0m) are\n",
+            "integers within the \u001b[36m0..255\u001b[0m range, while Unicode code points (\u001b[36mt:char/0\u001b[0m) are\n",
+            "integers within the \u001b[36m0..0x10FFFF\u001b[0m range. The \u001b[36mIO\u001b[0m module provides the\n",
+            "\u001b[36mchardata_to_string/1\u001b[0m function for chardata as the \"counter-part\" of the\n",
+            "\u001b[36miodata_to_binary/1\u001b[0m function for IO data.\n",
+            "\u001b[0m\n",
+            "If you try to use \u001b[36miodata_to_binary/1\u001b[0m on chardata, it will result in an argument\n",
+            "error. For example, let's try to put a code point that is not representable\n",
+            "with one byte, like \u001b[36m?π\u001b[0m, inside IO data:\n",
+            "\u001b[0m\n",
+            "\u001b[36m    IO.iodata_to_binary([\"The symbol for pi is: \", ?π])\n",
+            "    #=> ** (ArgumentError) argument error\u001b[0m\n",
+            "\u001b[0m\n",
+            "If we use chardata instead, it will work as expected:\n",
+            "\u001b[0m\n",
+            "\u001b[36m    iex> IO.chardata_to_string([\"The symbol for pi is: \", ?π])\n",
+            "    \"The symbol for pi is: π\"\u001b[0m\n",
+            "\u001b[0m\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v2CvxtY_rag8"
+      },
+      "source": [
+        "# enum\n",
+        "\n",
+        "enum はリストなどコレクションを列挙するための一連のアルゴリズム。\n",
+        "\n",
+        "* all?、any?\n",
+        "* chunk_every、chunk_by、map_every\n",
+        "* each\n",
+        "* map、filter、reduce\n",
+        "* min、max\n",
+        "* sort、uniq、uniq_by\n",
+        "* キャプチャ演算子 `(&)`\n"
+      ]
     },
     {
       "cell_type": "code",
